--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ body {
 
 #bm {
     width: 90%;
-    animation: fadeInAnimation ease 3s;
+    animation: fadeInAnimation ease 3s, scaleAnimation ease-in-out 2s;
     margin-left: -95%;
 }
 
@@ -58,3 +58,12 @@ body {
         opacity: 1; 
      } 
 } 
+
+@keyframes scaleAnimation {
+    0% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1.0);
+    }
+}
