--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
 
 
 .logo-splash {
-    width: 100%;
+    width: 65%;
     display: flex;
     flex-flow: row nowrap;
 }
@@ -25,6 +25,7 @@ body {
   width: 100%;
   box-sizing: border-box;
   flex: none;
+  margin-left: 27%
 }
 
 #dash-circ {
